--- a/TallerReparacions/app/config/routing.yml
+++ b/TallerReparacions/app/config/routing.yml
@@ -1,3 +1,7 @@
+taller_reparacio_backend:
+    resource: "@TallerReparacioBackendBundle/Resources/config/routing.yml"
+    prefix:   /
+
 taller_reparacio_frontend:
     resource: "@TallerReparacioFrontendBundle/Resources/config/routing.yml"
     prefix:   /
