--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/config/routing.yml
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/config/routing.yml
@@ -15,11 +15,11 @@ taller_reparacio_backend_editar_clients:
     defaults: { _controller: TallerReparacioBackendBundle:Clients:editar }
 
 taller_reparacio_backend_formAfegir_clients:
-    path:     /clients/afegir
+    path:     /clients/formAfegir
     defaults: { _controller: TallerReparacioBackendBundle:Clients:formAfegirClient }
 
 taller_reparacio_backend_afegir_clients:
-
+    path:     /clients/afegir
     defaults: { _controller: TallerReparacioBackendBundle:Clients:afegirClient }
 
 taller_reparacio_backend_consultar_vehicles:
