Canvis en el frontend de eliminar

--- a/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/config/routing.yml
+++ b/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/config/routing.yml
@@ -7,5 +7,5 @@ taller_reparacio_frontend_historic:
     defaults: { _controller: TallerReparacioFrontendBundle:Default:historic }
 
 taller_reparacio_frontend_login:
-    path:     /login
-    defaults: { _controller: TallerReparacioFrontendBundle:Default:login }
+    path:     /client/eliminar/{nif}
+    defaults: { _controller: TallerReparacioFrontendBundle:Default:AAAAAAAAAAAAAPASSARALBACKENDDENBERNABEeliminar }
