--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/config/routing.yml
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/config/routing.yml
@@ -10,9 +10,13 @@ taller_reparacio_backend_eliminar_clients:
     path:     /clients/eliminar/{nif}
     defaults: { _controller: TallerReparacioBackendBundle:Clients:eliminar }
 
+taller_reparacio_backend_formEditar_clients:
+    path:     /clients/formEditar/{nif}
+    defaults: { _controller: TallerReparacioBackendBundle:Clients:formEditarClient }
+
 taller_reparacio_backend_editar_clients:
     path:     /clients/editar
-    defaults: { _controller: TallerReparacioBackendBundle:Clients:editar }
+    defaults: { _controller: TallerReparacioBackendBundle:Clients:editarClient }
 
 taller_reparacio_backend_formAfegir_clients:
     path:     /clients/formAfegir
