--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/config/routing.yml
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/config/routing.yml
@@ -47,13 +47,17 @@ taller_reparacio_backend_consultar_reparacions:
     defaults: { _controller: TallerReparacioBackendBundle:Reparacions:mostrar }
 
 taller_reparacio_backend_eliminar_reparacions:
-    path:     /reparacions/eliminar
+    path:     /reparacions/eliminar/{codi}
     defaults: { _controller: TallerReparacioBackendBundle:Reparacions:eliminar }
 
 taller_reparacio_backend_editar_reparacions:
-    path:     /reparacions/editar
+    path:     /reparacions/editar/{codi}
     defaults: { _controller: TallerReparacioBackendBundle:Reparacions:editar }
 
+taller_reparacio_backend_formCrear_reparacions:
+    path:     /reparacions/formCrear
+    defaults: { _controller: TallerReparacioBackendBundle:Reparacions:formCrearReparacio }
+
 taller_reparacio_backend_afegir_reparacions:
-    path:     /reparacions/afegir
-    defaults: { _controller: TallerReparacioBackendBundle:Reparacions:afegir }
+    path:     /clients/crear
+    defaults: { _controller: TallerReparacioBackendBundle:Reparacions:crearReparacio }
